<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/lbk"
    android:orientation="vertical" >

    <!-- Login Title -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/studentdetails"
        android:textColorHint="@color/Black" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="40dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="text"
        android:textColorHint="@color/Black" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@color/LightGreen"
        android:text="@string/submit"
        android:onClick="submitApp" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fname"
        android:layout_below="@+id/fname"
        android:layout_marginTop="118dp"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="text"
        android:textColorHint="@color/Black" />

    <EditText
        android:id="@+id/studentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fname"
        android:layout_alignRight="@+id/LinkedinProfile"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/studentid"
        android:inputType="text"
        android:textColorHint="@color/Black" />

    <EditText
        android:id="@+id/LinkedinProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fname"
        android:layout_below="@+id/fname"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/LinkedinProfile"
        android:inputType="text"
        android:textColorHint="@color/Black" />

</RelativeLayout>