<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pinkbk"
    android:orientation="vertical" >

    <!-- Login Title -->


    <!--
               <Button
             android:id="@+id/upload"
             android:layout_width="89dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="0.64"
             android:text="@string/upload" />
    -->

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="39dp"
        android:background="@color/LightGreen"
        android:onClick="submitStudentData"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/txtLinkedln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/LinkedinProfile"
        android:inputType="text"
        android:textColorHint="@color/Black" />

    <EditText
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/Intro"
        android:inputType="text"
        android:textColorHint="@color/Black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/info_title"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtLinkedln"
        android:layout_alignLeft="@+id/txtLinkedln"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/Resume"
        android:inputType="text"
        android:textColorHint="@color/Black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtStudentId"
        android:layout_alignRight="@+id/txtIntro"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="text"
        android:textColorHint="@color/Black" />

    <EditText
        android:id="@+id/txtStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIntro"
        android:layout_below="@+id/txtFirstName"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/studentid"
        android:inputType="text"
        android:textColorHint="@color/Black" >

        <requestFocus />
    </EditText>

</RelativeLayout>